[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pantax-dbg"
version = "0.1.0"
description = "PanTax-DBG: a species- and strain-level metagenomic profiler using DBG-based refinement"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
  {name = "Jialu Xu"}
]
dependencies = []

[project.scripts]
pantax-dbg = "pantax_dbg.cli:main"

[tool.setuptools]
packages = ["pantax_dbg", "pantax_dbg_scripts"]